--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
-    background-color: rgb(69, 69, 69);
+    box-sizing: border-box;
+    background-color: #363636;
     color: #fff;
+    font-family: "Roboto", sans-serif;
 }
